--- a/kintone-help-astro-poc/src/layouts/PageLayout.astro
+++ b/kintone-help-astro-poc/src/layouts/PageLayout.astro
@@ -7,11 +7,13 @@ import {
   isHomePage,
   getLangFromLanguageCode,
 } from "../lib/url.js";
+import { getCurrentPage, getSiteHomeSections } from "../lib/page";
 import Disclaimer2 from "./components/Disclaimer2.astro";
 // import Related from "./components/Related.astro";
 import Footer from "./components/Footer.astro";
 import Header from "./components/Header.astro";
 import TreeNav from "./components/TreeNav.astro";
+import Breadcrumb from "./components/Breadcrumb.astro";
 
 type Props = MarkdownLayoutProps<{
   title?: string;
@@ -45,6 +47,12 @@ const {
 
 // permalink と relPermalink を生成
 const permalinks = getPermalinks(Astro.url, env.domain);
+
+// サイトのセクション情報を取得
+const sections = await getSiteHomeSections();
+
+// 現在ページを特定（Breadcrumb用）
+const currentPage = getCurrentPage(Astro, sections);
 
 // page オブジェクトを構築
 const pageData = {
@@ -119,7 +127,7 @@ const isDisabled = disabled.includes(env.targetRegion);
               {env.useWovn && <Disclaimer2 page={pageData} />}
 
               <main id="main" role="main">
-                <div>[BREADCRUMB PARTIAL]</div>
+                <Breadcrumb page={currentPage} />
 
                 <article class="article" role="article">
                   <div class="id-title">
