--- a/kintone-help-astro-poc/src/layouts/components/MegaNavGrSectBar.astro
+++ b/kintone-help-astro-poc/src/layouts/components/MegaNavGrSectBar.astro
@@ -12,8 +12,8 @@ const { cursect, secondsect } = Astro.props;
 
 // ページをweight順にソート
 const sortedPages = (cursect.pages || [])
-  .filter((page: PageProps) => page.params?.weight !== 0)
-  .sort((a: PageProps, b: PageProps) => (a.weight || 0) - (b.weight || 0));
+  .filter((page: PageProps) => page.frontmatter.weight !== 0)
+  .sort((a: PageProps, b: PageProps) => a.frontmatter.weight - b.frontmatter.weight);
 
 let menuid = 0;
 ---
