--- a/kintone-help-astro-poc/src/layouts/components/AlternateLink.astro
+++ b/kintone-help-astro-poc/src/layouts/components/AlternateLink.astro
@@ -45,10 +45,13 @@ const languageListData = {
     },
   ],
 } as const;
+
+// TODO: 既存の .AllTranslations 相当のものだが、Wovn対応でどういう扱いにするか未検討
+const allTranslations = [] as any;
 ---
 
 {
-  page.allTranslations?.map(
+  allTranslations.map(
     (translation) =>
       translation.lang === defLang && (
         <link
@@ -77,7 +80,7 @@ const languageListData = {
 
     return (
       <>
-        {page.allTranslations?.map((translation) => {
+        {allTranslations.map((translation) => {
           let disp = true;
           let thisLang = translation.lang;
 
